# mentor_start_up_agent

./: .gitignore  README.md  ai_agent_explained.md  main.py  pyproject.toml  requirements.txt  run_adapter.py  simclr_explained.md  smithery.yaml  test_local.py
mentor_mcp/: __init__.py  __main__.py  main.py
