[project]
name = "mentor-mcp"
version = "0.1.0"
description = "An MCP server that explains technical topics using CrewAI mentor/student agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.30.0",
    "mcp>=1.0.0",
    "requests",
    "nanda-adapter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mentor_mcp"]
[project.scripts]
mentor_mcp = "mentor_mcp.main:main"



